--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "steroids/core": "*",
         "vkcom/vk-php-sdk": "^5.101",
         "league/oauth2-facebook": "^2.0",
-        "google/apiclient": "^2.5"
+        "google/apiclient": "^2.5",
+        "pragmarx/google2fa": "^8.0",
+        "bacon/bacon-qr-code": "^2.0"
     },
     "autoload": {
         "psr-4": {"steroids\\auth\\": ""}
